--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,15 @@
+.class
 
-#Package Files#
+#Moblie Tools for Java
+.mtj.tmp/
+
+#Package Files #
 *.jar
 *.war
 *.ear
-!.mvn/wrapper/maven-wrapper.jar
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-
-### IntelliJ IDEA ###
+#Virtual machine crash logs
+hs_err_pid*
 target
 .idea
-*.iws
-*.iml
-*.ipr
 .devopsbuddy.iml
-
-### NetBeans ###
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
