--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .class
 
-#Moblie Tools for Java
+#Moblie Tools for Java (J2ME)
 .mtj.tmp/
 
 #Package Files #
@@ -8,8 +8,9 @@
 *.war
 *.ear
 
-#Virtual machine crash logs
+#Virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml#
 hs_err_pid*
+
 target
 .idea
 .devopsbuddy.iml
