--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
-.class
+*.class
 
-#Moblie Tools for Java (J2ME)
+# Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-#Package Files #
+# Package Files #
 *.jar
 *.war
 *.ear
 
-#Virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml#
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-target
-.idea
-.devopsbuddy.iml
+src/main/resources/static/css/formValidation.min.css
+src/main/resources/static/js/formValidation.min.js
